<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentoPermisos">


    <TextView
        android:id="@+id/textView"
        android:layout_width="330dp"
        android:layout_height="63dp"
        android:text="@string/mensaje_inicio_primario"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:fontFamily="sans-serif-medium"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122" />

    <!-- <a href="https://storyset.com/technology">Technology illustrations by Storyset</a> -->
    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/VoiceControlGif"
        android:layout_width="215dp"
        android:layout_height="296dp"
        android:src="@drawable/voice_control"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="327dp"
        android:layout_height="53dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/mensaje_primario"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824" />

    <Button
        android:id="@+id/button"
        android:layout_width="225dp"
        android:layout_height="45dp"
        android:text="@string/mensaje_boton_primario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973" />

</androidx.constraintlayout.widget.ConstraintLayout>