<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentoInicio">

    <ImageView
        android:id="@+id/AlexaLogo"
        android:layout_width="86dp"
        android:layout_height="46dp"
        android:src="@drawable/alexa_logo_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026" />

    <TextView
        android:id="@+id/CabeceraInicio"
        android:layout_width="313dp"
        android:layout_height="47dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/mensaje_bienvenida"
        android:textColor="@color/purple_700"
        android:textSize="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165" />

    <TextView
        android:id="@+id/MensajeInicio"
        android:layout_width="337dp"
        android:layout_height="37dp"
        android:layout_marginTop="364dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/mensaje_inicio"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CabeceraInicio" />

    <!-- <a href="https://storyset.com/technology">Technology illustrations by Storyset</a> -->
    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/SecurityOnGif"
        android:layout_width="215dp"
        android:layout_height="296dp"
        android:src="@drawable/security_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="225dp"
        android:layout_height="45dp"
        android:text="@string/mensaje_boton_inicio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MensajeInicio"
        app:layout_constraintVertical_bias="0.474" />
</androidx.constraintlayout.widget.ConstraintLayout>